# vktest

./: CMakeLists.txt  LICENSE  README.md  astylerc  build.sh  configure.sh  run.sh
src/: README.md  device_info.c  device_info.h  libs.h  main.c  vk_alloc.c  vk_alloc.h  vk_init.c  vk_init.h  vk_platform_specific.c  vk_platform_specific.h
